--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>EV MPGe Calculator</h1>
         <div class="input-group">
             <label for="gasPrice">Gas Price ($/gallon):</label>
-            <input type="number" id="gasPrice" value="3.20" step="0.01">
+            <input type="number" id="gasPrice" value="3.20">
         </div>
         <div class="input-group">
             <label for="electricPrice">Electric Price ($/kWh):</label>
