--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>EV MPGe Calculator</h1>
         <div class="input-group">
             <label for="gasPrice">Gas Price ($/gallon):</label>
-            <input type="number" id="gasPrice" value="3.20">
+            <input type="number" id="gasPrice" value="3.20" step="0.01" pattern="^\d*(\.\d{0,2})?$">
         </div>
         <div class="input-group">
             <label for="electricPrice">Electric Price ($/kWh):</label>
-            <input type="number" id="electricPrice" value="0.40" step="0.01">
+            <input type="number" id="electricPrice" value="0.40" step="0.01" pattern="^\d*(\.\d{0,2})?$">
         </div>
         <div class="input-group">
             <label for="gasMPG">Gas Vehicle MPG:</label>
