--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
             }
 
              // Set the color based on the type of vehicle
-            var vehicle1Color = vehicle1Type === 'electric' ? '#346beb' : '#eb8034';
-            var vehicle2Color = vehicle2Type === 'electric' ? '#346beb' : '#eb8034';
+            var vehicle1Color = vehicle1Type === 'electric' ? '#72b644' : '#f26937';
+            var vehicle2Color = vehicle2Type === 'electric' ? '#72b644' : '#f26937';
 
             // Update the chart colors
             chart.updateOptions({
