Reorganized scripts to JS file

--- a/index.html
+++ b/index.html
@@ -59,11 +59,9 @@
         <button id="calculate">Calculate</button>
         
         <div id="costGraph"></div>
-        
-                    <!-- Include the ApexCharts library -->
+        <!-- Include the ApexCharts library -->
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
-        <!-- Your existing HTML code... -->
         <div class="outputBox" id="output">
             <div id="mpgEquivalent"></div>
             <div id="chart"></div>
@@ -94,7 +92,7 @@
             },
             yaxis: {
                 title: {
-                    text: 'Efficiency (MPG or Mi/kWh)',
+                    text: 'Efficiency (MPG or Real MPGe)',
                     style: {
                         fontSize: '12px'
                     }
@@ -118,40 +116,6 @@
         var chart = new ApexCharts(document.querySelector("#chart"), options);
         chart.render();
 
-        // Handle the calculate button click event
-        document.getElementById('calculate').addEventListener('click', function() {
-            // Get the efficiency values from the input fields
-            var vehicle1Efficiency = document.getElementById('vehicle1Efficiency').value;
-            var vehicle2Efficiency = document.getElementById('vehicle2Efficiency').value;
-
-            // Check if the selected vehicle is an Electric Car
-            var vehicle1Type = document.getElementById('vehicle1Type').value;
-            var vehicle2Type = document.getElementById('vehicle2Type').value;
-            var electricPrice = parseFloat(document.getElementById('electricPrice').value);
-            var gasPrice = parseFloat(document.getElementById('gasPrice').value);
-
-            if (vehicle1Type === 'electric') {
-                vehicle1Efficiency = (vehicle1Efficiency/(electricPrice/gasPrice)).toFixed(2); // Use the calculated electricCarMPGe value
-            }
-            if (vehicle2Type === 'electric') {
-                vehicle2Efficiency = (vehicle2Efficiency/(electricPrice/gasPrice)).toFixed(2); // Use the calculated electricCarMPGe value
-            }
-
-             // Set the color based on the type of vehicle
-            var vehicle1Color = vehicle1Type === 'electric' ? '#72b644' : '#f26937';
-            var vehicle2Color = vehicle2Type === 'electric' ? '#72b644' : '#f26937';
-
-            // Update the chart colors
-            chart.updateOptions({
-                colors: [vehicle1Color, vehicle2Color]
-            });
-
-            // Update the chart data with the new efficiency values
-            chart.updateSeries([{
-                data: [vehicle1Efficiency, vehicle2Efficiency]
-            }]);
-
-        });
         </script>
             <script src="script.js"></script>         
         </div>
