Removed bullet points and updated name

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vehicle Fuel Cost Comparison Tool</title>
+    <title>EV-MPG</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -53,7 +53,7 @@
                 <label for="vehicleEfficiency">Efficiency</label>
                 <input type="number" id="vehicleEfficiency" disabled>
 
-                <label for="vehicleType">Type</label>
+                <label for="vehicleType">Fuel Type</label>
                 <input type="text" id="vehicleType" disabled>
             </div>
             
@@ -72,7 +72,7 @@
         <!-- Vehicle List Box -->
         <div class="box" id="vehicle2Box">
             <h2>Vehicle Selection</h2>
-            <ul id="vehicleList"></ul>
+            <ul style="list-style-type:none" id="vehicleList"></ul>
         </div>
         
         <!-- Calculation and Output Section -->
