Removed chart legend

--- a/index.html
+++ b/index.html
@@ -121,10 +121,13 @@
                 dataLabels: {
                     enabled: true,
                     style: {
-                        fontSize: '40px'
+                        fontSize: '30px'
                     }
                 },
-                colors: ["#304758", "#eb8034"]
+                colors: ["#304758", "#eb8034"],
+                legend: {
+                    show: false
+                }
             }
 
             // Use the ApexCharts object to create a new chart
