--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 },
                 yaxis: {
                     title: {
-                        text: 'Efficiency (MPG or Real MPGe)',
+                        text: 'Efficiency (MPG or Real EV-MPG)',
                         style: {
                             fontSize: '20px'
                         }
