Added Line chart comparison

--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
         <div class="outputBox" id="output">
             <div id="mpgEquivalent"></div>
             <div id="chart"></div>
+            <div id="lineChart"></div>
         </div>
 
         <script>
