Fixed CSS, made grid wider

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
         <!-- Include the ApexCharts library -->
         <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
 
-        <div class="outputBox" id="output">
-            <div id="mpgEquivalent"></div>
+        <!-- Charts Output -->
+        <div id="charts">
             <div id="chart"></div>
             <div id="lineChart"></div>
         </div>
