Added website title

--- a/index.html
+++ b/index.html
@@ -7,9 +7,14 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="topbar">
-        <h1>Vehicle Fuel Cost Comparison</h1>
+
+    
+
+    <div id="topbar" style="display: flex; justify-content: center; align-items: center;">
+        <img src="https://github.com/ethanb123/ev-mpg/blob/main/Data/Main-Logo.png?raw=true" alt="Logo" style="width: 12vh; height: 12vh; border-radius: 15%; margin-right: 2vw">
+        <h1 style="font-size: 6vh">EV-MPG</h1>
     </div>
+
     <div id="container">
         
         <!-- Rates Box -->
