Improved vehicle selction box ui

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
         <div class="box" id="vehicle2Box">
             <h2>Vehicle Selection</h2>
             <ul style="list-style-type:none" id="vehicleList"></ul>
+            <button onclick="location.reload()">Clear</button>
         </div>
         
         <!-- Include the ApexCharts library -->
