--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3169574573261516"crossorigin="anonymous"></script>
     
 
     <div id="topbar" style="display: flex; justify-content: center; align-items: center;">
