--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="topbar" style="display: flex; justify-content: center; align-items: center;">
-        <img style='margin-bottom: 20px; margin-top: -40px; width: 150px; height: 150px' src="https://github.com/ethanb123/ev-mpg/blob/main/Data/Main-Logo.png?raw=true" id='logo'>
+        <img style='margin-bottom: 20px; margin-top: -40px; width: 17vh; height: 17vh' src="https://github.com/ethanb123/ev-mpg/blob/main/Data/Main-Logo.png?raw=true" id='logo'>
         <h1 style="font-size: 6vh; margin-bottom: 4vh">EV-MPG</h1>
         <p style='font-size: 2rem; width: 35%; margin-left: 30px; margin-bottom: 4vh'>EV-MPG is a web application that 
             helps you compare the long-term costs of gasoline and electric vehicles.
