--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div id="topbar" style="display: flex; justify-content: center; align-items: center;">
-        <img style='margin-bottom: 20px; margin-top: -40px; width: 17vh; height: 17vh' src="https://github.com/ethanb123/ev-mpg/blob/main/Data/Main-Logo.png?raw=true" id='logo'>
-        <h1 style="font-size: 6vh; margin-bottom: 4vh">EV-MPG</h1>
-        <p style='font-size: 2rem; width: 35%; margin-left: 30px; margin-bottom: 4vh'>EV-MPG is a web application that 
+        <img style='margin-bottom: 20px; margin-top: -40px; width: 10vw; height: 10vw' src="https://github.com/ethanb123/ev-mpg/blob/main/Data/Main-Logo.png?raw=true" id='logo'>
+        <h1 style="font-size: 4vw; margin-bottom: 2vw;  margin-top: 1vw">EV-MPG</h1>
+        <p style='font-size: 1.5vw; width: 35%; margin-left: 30px; margin-bottom: 2vw; margin-top: 1vw'>EV-MPG is a web application that 
             helps you compare the long-term costs of gasoline and electric vehicles.
        </p>
     </div>
