--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <!-- Vehicle List Box -->
         <div class="box" id="vehicle2Box">
             <h2 style="font-size:28px">Selected Vehicles for Comparison</h2>
-            <ul style="list-style-type:none" id="vehicleList"></ul>
+            <ul style="list-style-type:none;" id="vehicleList"></ul>
             <button id='clearButton' onclick="location.reload()">Clear</button>              
         </div>
         
@@ -122,8 +122,9 @@
                 title: {
                     text: 'Fuel Efficiency Comparison',
                     align: 'center',
+                    offsetY: 30,
                     style: {
-                      fontSize:  '40px',
+                      fontSize:  '2vw',
                       fontWeight:  'bold',
                     },
                 },
@@ -134,7 +135,7 @@
                 xaxis: {
                     labels: {
                         style: {
-                            fontSize: '20px'
+                            fontSize: '0.5vh'
                         }
                     }
                 },
@@ -142,12 +143,12 @@
                     title: {
                         text: 'Efficiency (MPG or EV-MPG)',
                         style: {
-                            fontSize: '20px'
+                            fontSize: '1.2vw'
                         }
                     },
                     labels: {
                         style: {
-                            fontSize: '20px'
+                            fontSize: '1.5vw'
                         }
                     }
                 },
@@ -181,29 +182,29 @@
                 title: {
                     text: 'Cumulative Fuel Cost Over Time',
                     align: 'center',
+                    offsetY: 30,
                     style: {
-                      
-                      fontSize:  '40px',
+                      fontSize:  '1.7vw',
                       fontWeight:  'bold',
                     },
                 },
                 xaxis: {
                     labels: {
                         style: {
-                            fontSize: '20px'
+                            fontSize: '0.5vh'
                         }
                     }
                 },
                 yaxis: {
                     title: {
-                        text: 'Efficiency (MPG or EV-MPG)',
+                        text: 'Total Fuel Cost',
                         style: {
-                            fontSize: '1.5rem'
+                            fontSize: '1.2vw'
                         }
                     },
                     labels: {
                         style: {
-                            fontSize: '20px'
+                            fontSize: '1.5vw'
                         }
                     }
                 },
