--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3169574573261516"crossorigin="anonymous"></script>
 </head>
 <body>
-    <div id="topbar" style="display: flex; justify-content: center; align-items: center;">
-        <img style='margin-bottom: 20px; margin-top: -40px; width: 10vw; height: 10vw' src="https://github.com/ethanb123/ev-mpg/blob/main/Data/Main-Logo.png?raw=true" id='logo'>
-        <h1 style="font-size: 4vw; margin-bottom: 2vw;  margin-top: 1vw">EV-MPG</h1>
-        <p style='font-size: 1.5vw; width: 35%; margin-left: 30px; margin-bottom: 2vw; margin-top: 1vw'>EV-MPG is a web application that 
-            helps you compare the long-term costs of gasoline and electric vehicles.
-       </p>
+    <div id="topbar" style=" display: flex;  align-items: center;">
+        <div class="vertical-center">
+            <img style='margin-left: 10vw; width: 10vw; height: 10vw' src="https://github.com/ethanb123/ev-mpg/blob/main/Data/Main-Logo.png?raw=true" id='logo'>
+        </div>
+       
+        <div class="vertical-center">
+            <h1 style="margin-left: 22vw; font-size: 4vw; ">EV-MPG</h1>
+        </div>
+        <div class="vertical-center">
+            <p style='margin-left: 40vw; font-size: 1.5vw; width: 35%; '>EV-MPG is a web application that 
+                helps you compare the long-term costs of gasoline and electric vehicles.
+            </p>
+        </div>  
     </div>
 
 
