Fixed Label size

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 xaxis: {
                     labels: {
                         style: {
-                            fontSize: '0.5vh'
+                            fontSize: '20px'
                         }
                     }
                 },
@@ -150,7 +150,7 @@
                     title: {
                         text: 'Efficiency (MPG or EV-MPG)',
                         style: {
-                            fontSize: '1.2vw'
+                            fontSize: '1vw'
                         }
                     },
                     labels: {
